# WordCanvas

./: .gitignore  MANIFEST.in  README.md  README_en.md  README_tw.md  run_pytest.bash  setup.cfg
.github/workflows/: .pylintrc  pull_request.yml  release.yml
tests/: test_custom_aug.py  test_font_utils.py  test_generator.py  test_imgaug.py  test_mrz_generator.py  test_text_image_renderer.py  test_utils.py  test_word_canvas.py
textgenerator/: __init__.py  generator.py  imgaug.py  text2image.py  utils.py
wordcanvas/: __init__.py  base.py  generator.py  imgaug.py  mrz.py  text2image.py  utils.py  word_canvas.py
wordcanvas/barcode/: code39table.py  gen_barcode.py
wordcanvas/fonts/: README.md
wordcanvas/gen_barcode/: __init__.py  codetable.py  gen_barcode.py
