[metadata]
name = wordcanvas_docsaid
version = attr: wordcanvas.__version__
description = Generating text with custom fonts and styles.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.10,<=3.12
url = https://github.com/DocsaidLab/WordCanvas.git

[options]
packages = find:
include_package_data = True
setup_requires=
	pip
	setuptools
	wheel
install_requires =
    capybara_docsaid>=0.6.0
    fonttools
    pillow
    pandas
    regex
    numpy
    lxml
    prettytable
    albumentations


[options.packages.find]
exclude =
    docs
    tests
